<?xml version="1.0"?>
<package format="2">
  <name>hrpsys_sample</name>
  <version>0.0.0</version>
  <description>The hrpsys_sample package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>choreonoid_bridge_shm</depend>
  <depend>choreonoid_ros_ext_plugin</depend>
  <depend>rtcloader</depend>
  <depend>execution_context_rostime</depend>

  <depend>hrpsys</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
